[package]
name = "bilbo"
version = "0.1.0"
edition = "2021"

[lib]
name = "bilbo"
path = "src/lib.rs"

[[bin]]
name = "bilbo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["cargo"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
num-bigint = "0.4.6"
num-prime = "0.4.4"
openssl = { version = "0.10.64", features = ["vendored"] }
pem = "3.0.4"
ping = "0.5.2"
rand = "0.8.5"
shamirss = "0.1.3"
thiserror = "2.0.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
strip = "symbols"
debug = false
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.test]
# Enable optimizations for tests
opt-level = 3
